--- a/index.html
+++ b/index.html
@@ -686,44 +686,43 @@
                     <div class="project-card-content">
                         <h3>Farmer Income Prediction Model</h3>
                         <p>Developed an L&T Finance model integrating diverse data to predict farmer income. Engineered features, tuned an XGBoost+LightGBM+Ridge ensemble, and deployed a REST API to enable data-driven credit decisions.</p>
-                    <div class="ai-summarize-container">
-                     <button class="ai-summarize-btn"> Summarize with AI</button>
-                     <a href="https://rahularya014.github.io/Farmer-income-Demo/" class="project-link">View Project</a>
                     </div>
+                    <button class="ai-summarize-btn">✨ Summarize with AI</button>
+                </div>
                 <div class="project-card reveal">
                     <div class="project-card-content">
                         <h3>AMEX Customer Engagement Model</h3>
                         <p>Created a scalable Dask pipeline to personalize offers for 370K+ users. Built an XGB+LGBM+CatBoost ensemble with custom features like Click Momentum, boosting performance by 15%.</p>
                     </div>
-                    <button class="ai-summarize-btn"> Summarize with AI</button>
+                    <button class="ai-summarize-btn">✨ Summarize with AI</button>
                 </div>
                 <div class="project-card reveal">
                      <div class="project-card-content">
                         <h3>AI-Powered Supply Chain Analytics</h3>
                         <p>Automated a full ETL pipeline using N8N. Leveraged Quadratic AI for prompt-based KPI computation, auto-generating SQL logic and visual insights to accelerate decision-making.</p>
                     </div>
-                    <button class="ai-summarize-btn"> Summarize with AI</button>
+                    <button class="ai-summarize-btn">✨ Summarize with AI</button>
                 </div>
                 <div class="project-card reveal">
                     <div class="project-card-content">
                         <h3>Credit Card Fraud Detection</h3>
                         <p>Designed a Keras autoencoder on 227K+ transactions, achieving a ROC-AUC of 0.95 for anomaly detection. Also built a Sklearn pipeline with 93.4% test accuracy.</p>
                     </div>
-                    <button class="ai-summarize-btn"> Summarize with AI</button>
+                    <button class="ai-summarize-btn">✨ Summarize with AI</button>
                 </div>
                 <div class="project-card reveal">
                     <div class="project-card-content">
                         <h3>Causes of Death in India (1950-2019)</h3>
                         <p>Analyzed 30 years of data using OLS linear regression to study the impact of various health and social factors on death rates, achieving a high R² of 0.8959.</p>
                     </div>
-                    <button class="ai-summarize-btn"> Summarize with AI</button>
+                    <button class="ai-summarize-btn">✨ Summarize with AI</button>
                 </div>
                 <div class="project-card reveal">
                     <div class="project-card-content">
                         <h3>Economic & Crime Analysis</h3>
                         <p>Conducted analyses on the economic impact of COVID-19 on the Indian economy and a separate study on U.S. crime rates using a rational choice model and time series analysis.</p>
                     </div>
-                    <button class="ai-summarize-btn"> Summarize with AI</button>
+                    <button class="ai-summarize-btn">✨ Summarize with AI</button>
                 </div>
             </div>
         </section>
@@ -1106,4 +1105,3 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
-
