--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             background-image: linear-gradient(to top, rgba(20, 20, 20, 1) 0%, rgba(20, 20, 20, 0) 50%, rgba(20, 20, 20, 1) 100%), url('https://images.unsplash.com/photo-1519681393784-d120267933ba?q=80&w=2070&auto=format&fit=crop');
             background-size: cover;
             background-position: center;
+            /* Added transition for smooth background movement */
+            transition: background-position 0.1s ease-out;
         }
         .card-row {
             scrollbar-width: none; /* Firefox */
@@ -110,8 +112,8 @@
             <h3 class="category-title text-2xl font-bold mb-4">PROFESSIONAL EXPERIENCE</h3>
             <div class="card-row-container">
                 <div class="flex space-x-4 overflow-x-auto pb-4 card-row">
-                    <div class="card w-72 bg-[#282828] rounded-lg overflow-hidden" data-title="Credit Risk Modelling Intern" data-description="Developed ML models for credit risk at the Central Bank of India, integrating banking domain knowledge (NPA, DPD) with advanced feature engineering. Implemented end-to-end workflows and integrated Basel III and PAR metrics to ensure regulatory compliance." data-image="https://images.unsplash.com/photo-1554260570-e9682a3418b8?q=80&w=2070&auto=format&fit=crop">
-                        <img src="https://images.unsplash.com/photo-1554260570-e9682a3418b8?q=80&w=2070&auto=format&fit=crop" alt="Financial Modelling" class="w-full h-40 object-cover">
+                    <div class="card w-72 bg-[#282828] rounded-lg overflow-hidden" data-title="Credit Risk Modelling Intern" data-description="Developed ML models for credit risk at the Central Bank of India, integrating banking domain knowledge (NPA, DPD) with advanced feature engineering. Implemented end-to-end workflows and integrated Basel III and PAR metrics to ensure regulatory compliance." data-image="https://images.unsplash.com/photo-1579532582937-16c108930bf6?q=80&w=1974&auto=format&fit=crop">
+                        <img src="https://images.unsplash.com/photo-1579532582937-16c108930bf6?q=80&w=1974&auto=format&fit=crop" alt="Financial Institution Building" class="w-full h-40 object-cover">
                         <div class="card-content p-4"><h4 class="font-bold text-lg">Central Bank of India</h4></div>
                     </div>
                     <div class="card w-72 bg-[#282828] rounded-lg overflow-hidden" data-title="Product Manager Intern" data-description="Led initiatives boosting user engagement by 18% at Beyondriffs. Refined project roadmaps, fostered team collaboration, and spearheaded market research with over 250 users to drive data-informed product decisions." data-image="https://images.unsplash.com/photo-1556761175-b413da4baf72?q=80&w=1974&auto=format&fit=crop">
@@ -223,7 +225,7 @@
                     <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
                 </a>
             </div>
-             <a href="#" class="inline-block px-8 py-3 bg-red-600 text-white font-bold rounded hover:bg-red-700 transition-colors">Download Resume</a>
+             <a href="mailto:rahularyajii2002@gmail.com?subject=Resume%20Request%20from%20Portfolio" class="inline-block px-8 py-3 bg-red-600 text-white font-bold rounded hover:bg-red-700 transition-colors">Request Resume</a>
              <p class="text-gray-500 mt-8">&copy; 2024 Rahul Arya. All Rights Reserved.</p>
         </div>
     </footer>
@@ -273,6 +275,16 @@
                 } else {
                     nav.classList.remove('scrolled');
                 }
+            });
+            
+            // Header background parallax effect
+            const header = document.querySelector('.header-bg');
+            window.addEventListener('mousemove', (e) => {
+                const { clientX, clientY } = e;
+                const x = (clientX / window.innerWidth - 0.5) * 30; // Intensity of the effect
+                const y = (clientY / window.innerHeight - 0.5) * 30;
+
+                header.style.backgroundPosition = `calc(50% + ${x}px) calc(50% + ${y}px)`;
             });
 
 
@@ -415,5 +427,4 @@
     </script>
 </body>
 </html>
-
 
