--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         }
 
         .header-bg {
-            background-image: linear-gradient(to top, rgba(20, 20, 20, 1) 0%, rgba(20, 20, 20, 0) 50%, rgba(20, 20, 20, 1) 100%), url('https://images.unsplash.com/photo-1519681393784-d120267933ba?q=80&w=2070&auto=format&fit=crop');
+            background-image: url('https://images.unsplash.com/photo-1519681393784-d120267933ba?q=80&w=2070&auto=format&fit=crop');
             background-size: 110%; /* Corrected for parallax effect */
             background-position: center;
         }
@@ -108,17 +108,6 @@
             opacity: 1;
             transform: translateY(0);
         }
-        
-        /* Section Divider */
-        .divider {
-            height: 1px;
-            width: 100%;
-            max-width: 1200px; /* Adjust to match your content width */
-            margin: -1px auto 0 auto;
-            background: transparent;
-            border-bottom: 1px solid rgba(229, 9, 20, 0.2);
-            box-shadow: 0 5px 15px -5px rgba(229, 9, 20, 0.4);
-        }
 
         /* Mobile Responsive Adjustments */
         @media (max-width: 768px) {
@@ -154,7 +143,7 @@
 
     <!-- Header Section -->
     <header class="h-[80vh] md:h-[90vh] header-bg relative pt-16">
-        <div class="absolute inset-0 bg-black bg-opacity-60"></div>
+        <div class="absolute inset-0 bg-gradient-to-t from-[#141414] via-black/70 to-black/30"></div>
         <div class="relative z-10 flex flex-col justify-end h-full p-4 md:p-12 space-y-4">
             <h1 class="text-5xl md:text-7xl font-extrabold text-white tracking-tighter reveal">Rahul Arya</h1>
             <p class="text-xl md:text-2xl text-gray-300 max-w-2xl reveal" style="transition-delay: 0.2s;">Economist & Data Scientist. Turning economic intuition into data-driven solutions with AI & Machine Learning.</p>
@@ -166,8 +155,6 @@
         </div>
     </header>
     
-    <!-- New Section Divider -->
-    <div class="divider"></div>
 
     <main class="py-12 px-4 md:px-12 space-y-16">
 
@@ -576,4 +563,5 @@
     </script>
 </body>
 </html>
+
 
